--- a/startpage.html
+++ b/startpage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameVault</title>
     <link rel="stylesheet" href="assets/my.css">
+    <link rel="stylesheet" href="assets/fonts/fonts.css">
     <style>
         #zwei{float: right; margin-left: 30px;}
         #eins{float: right; margin-right: 2px ; padding-right: 2px ;}
