--- a/startpage.html
+++ b/startpage.html
@@ -42,8 +42,11 @@
                       
 
                     <div>
-                    <button id = "eins">Konto</button>
-                    <button id = "zwei">Warenkorb</button>
+                    <button  id = "eins" >Konto</button>
+                    <button id = "zwei"><a href="eingabemenu.html" style="font-size: medium;
+                        padding: 0;
+                        color:black ;
+                        text-decoration: none;" target="_blank"> Warenkorb</a></button>
                 </div>
                 </div>
             
