--- a/startpage.html
+++ b/startpage.html
@@ -180,8 +180,8 @@
         </div>
     </main>
     <footer class="flex-kontakt"> 
-        <p>Website wird gehostet von: </p>
-        <p>Kontakt: <a href="mailto:email@email.com" style="color:red">email@email.com</a></p>
+        <p>Website wird gehostet von:     <p></p> Tristan v Trentini </p>
+        <p>Kontakt: <a href="mailto:tristan.v.trentini@gmail.com" style="color:red">tristan.v.trentini@gmail.com</a></p>
     </footer>
 </body>
 </html>
